# vlscheduler

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build-pkg.sh  schedule.conf.example  scheduler.c  scheduler_config.lua  vlscheduler.lua
vlc3/include/: vlc_common.h  vlc_configuration.h  vlc_input.h  vlc_input_item.h  vlc_interface.h  vlc_playlist.h  vlc_plugin.h  vlc_threads.h  vlc_url.h
